# Cryptokaro

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/: backend.hpp  globals.hpp
include/handlers/: aes_handler.hpp  hash_handler.hpp  key_handler.hpp
src/: backend.cpp  globals.cpp  main.cpp
src/handlers/: aes_handler.cpp  hash_handler.cpp  key_handler.cpp
www/: app.js  index.html  style.css
